Added github link to slides.

--- a/DSSG-AWS-demo.slides.html
+++ b/DSSG-AWS-demo.slides.html
@@ -11830,7 +11830,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="PyData-Berlin">PyData Berlin<a class="anchor-link" href="#PyData-Berlin">&#182;</a></h1><h2 id="Matti-Lyra-@mattilyra">Matti Lyra @mattilyra<a class="anchor-link" href="#Matti-Lyra-@mattilyra">&#182;</a></h2><h2 id="@pydataberlin">@pydataberlin<a class="anchor-link" href="#@pydataberlin">&#182;</a></h2>
+<h1 id="PyData-Berlin">PyData Berlin<a class="anchor-link" href="#PyData-Berlin">&#182;</a></h1><h2 id="Matti-Lyra-@mattilyra">Matti Lyra @mattilyra<a class="anchor-link" href="#Matti-Lyra-@mattilyra">&#182;</a></h2><h2 id="@pydataberlin">@pydataberlin<a class="anchor-link" href="#@pydataberlin">&#182;</a></h2><h2 id="https://github.com/mattilyra/dssg-aws-demo"><a href="https://github.com/mattilyra/dssg-aws-demo">https://github.com/mattilyra/dssg-aws-demo</a><a class="anchor-link" href="#https://github.com/mattilyra/dssg-aws-demo">&#182;</a></h2>
 </div>
 </div>
 </div></section></section><section><section>
